--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "type": "module",
   "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
     "hono": "^4.6.14",
-    "marked": "^12.0.1"
+    "marked": "^12.0.1",
+    "file-type": "^19.6.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "file-type": "^19.6.0",
-    "tsx": "^4.7.1"
+    "tsx": "^4.7.1",
+    "typescript": "^5.6.3"
   }
 }
