--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
+    "cron": "^3.3.1",
+    "file-type": "^19.6.0",
     "hono": "^4.6.14",
-    "marked": "^12.0.1",
-    "file-type": "^19.6.0"
+    "marked": "^12.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
